# TaskScheduler

./: CMakeLists.txt  README.md  main.cpp
include/: TFunction.hpp  TTask.hpp  TTaskScheduler.hpp
tests/: tests.cpp
